# chromosort

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
scripts/: fasta_mummer_reference_order.py  fix_chimeric_contigs.py  scaffold_contigs.py
src/chromosort/: __init__.py  __main__.py  cli.py  fix_contigs.py  reference_order.py  scaffold.py
tests/: test_cli.py  test_fix_contigs.py  test_reference_order.py  test_scaffold.py
tests/data/: assembly.fa  ref.fa  sample.coords
tests/data/chimeric/: assembly.fa  ref.fa  sample.coords
tests/data/noisy_fix/: assembly.fa  ref.fa  sample.coords
tests/data/scaffold/: assignments.tsv  ordered.fa
