[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromosort"
version = "0.1.0"
description = "Reference-order genome assembly contigs from MUMmer alignments."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Conrad Roth" }
]
keywords = [
  "genomics",
  "assembly",
  "contigs",
  "MUMmer",
  "nucmer",
  "reference-guided"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rotheconrad/chromosort"
Issues = "https://github.com/rotheconrad/chromosort/issues"

[project.scripts]
chromo = "chromosort.cli:main"
chromosort = "chromosort.reference_order:main"
chromosort-fix-contigs = "chromosort.fix_contigs:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
